--- a/pkg/query_builder/BUILD.bazel
+++ b/pkg/query_builder/BUILD.bazel
@@ -21,7 +21,10 @@ go_library(
     ],
     importpath = "github.com/mindful-hq/spansql-query-builder/pkg/query_builder",
     visibility = ["//visibility:public"],
-    deps = ["@com_google_cloud_go_spanner//spansql"],
+    deps = [
+        "@com_github_google_uuid//:uuid",
+        "@com_google_cloud_go_spanner//spansql",
+    ],
 )
 
 go_test(
